Fixes part of the alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,24 +13,16 @@ h2 {
 }
 
 .title-div {
-  width: 100%;
+  /*width: 100%;*/
   max-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 0;
 }
 .background-row {
   background-color: #CAEBF2;
 }
-.container {
-  max-height: 100%;
-}
-.container-fluid {
-  width: 100%;
-  height: 2.5em;
-  border-style: solid;
-}
 .row {
+  min-width: 100%;
   max-height: 100%;
 }
