--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,3 @@ body, input[text], button {
 .index-container {
   /*border-style: solid;*/
 }
-.index-row {
-  border-style: solid;
-}
